<resources>
    <string name="app_name">Fun Learn</string>
    <string name="get_started_activity_sample">CONTOH</string>
    <string name="get_started_activity_get_started">MULAI !</string>
    <string name="login_activity_email">Email</string>
    <string name="login_activity_password">Kata Sandi (min 8 char)</string>
    <string name="login_activity_signin">Masuk</string>
    <string name="login_activity_forgot_password">Lupa kata sandi?</string>
    <string name="login_activity_create_account">Buat akun baru?</string>
    <string name="login_activity_status_weak">LEMAH</string>
    <string name="login_activity_status_normal">CUKUP</string>
    <string name="login_activity_status_strong">KUAT</string>
    <string name="login_activity_error_layout_email">Tolong masukan email yang valid</string>
    <string name="login_activity_error_email">Dibutuhkan email yang valid</string>
    <string name="login_activity_error_layout_password">Masukkan password</string>
    <string name="login_activity_error_layout_password2">Masukkan password lebih dari 8 karakter</string>
    <string name="login_activity_error_layout_password3">Masukkan password tidak lebih dari 25 karakter</string>
    <string name="login_activity_internet_error">Gagal tersambung ke server!</string>
    <string name="login_activity_signin_status">Mulai masuk…</string>
    <string name="login_activity_signup_fragment1_title">Buat Akun Anda</string>
    <string name="login_activity_fullname">Nama Lengkap</string>
    <string name="login_activity_username">Nama Pengguna</string>
    <string name="login_activity_next">Selanjutnya</string>
    <string name="login_activity_already_have_account">Sudah punya akun?</string>
    <string name="login_activity_show_hide_password_desc">tunjukkan/sembunyikan password</string>
    <string name="login_activity_error_layout_username">Masukkan username</string>
    <string name="login_activity_error_layout_fullname">Masukkan nama lengkap anda</string>
    <string name="login_activity_error_layout_fullname2">Dibutuhkan nama yang valid</string>
    <string name="login_activity_signup">Buat akun</string>
    <string name="login_activity_student">MURID</string>
    <string name="login_activity_jenjang">Jenjang *</string>
    <string name="login_activity_kelas">Kelas *</string>
    <string name="login_activity_school_code_title">Isikan kode sekolah anda : *</string>
    <string name="login_activity_code_school">kode sekolah</string>
    <string name="login_activity_code_school_what">Apa itu kode sekolah?</string>
    <string name="login_activity_teacher">GURU</string>
    <string name="login_activity_note">* Tolong isikan data dengan benar! Informasi ini digunakan untuk menentukan dan mengatur fitur-fitur pada aplikasi ini.</string>
    <string name="login_activity_code_error">Tolong isi kode sekolah dengan benar</string>
    <string name="login_activity_credential_error">Email atau password salah</string>
    <string name="login_activity_code_school_explanation">Kode sekolah adalah kode unik dari tiap sekolah untuk membuktikan anda adalah seorang guru. Silahkan tanyakan kepala sekolah anda untuk mendapatkan kode sekolah atau daftarkan sekolah anda ke email kami sup.funlearn@gmail.com</string>
    <string name="login_activity_reset_password_title">Mengatur Ulang Kata Sandi</string>
    <string name="login_activity_confirm">Konfirmasi</string>
    <string name="login_activity_forgot_password_success">Sebuah email telah dikirim ke %s. Ikuti panduan pada email tersebut. Jika Anda tidak menerima email dalam waktu 1 jam, silahkan hubungi kami di\nEmail : sup.funlearn@gmail.com\nPhone : +62 813 2217 2750</string>
    <string name="login_activity_forgot_password_not_match">Email dan nama pengguna tidak sesuai</string>
    <string-array name="school_array_account_type">
        <item>SD</item>
        <item>SMP</item>
        <item>SMA</item>
    </string-array>
    <string-array name="sd_array_account_type">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="smp_sma_array_account_type">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_activity_student_play1_choose_mode">PILIH MODE</string>
    <string name="main_activity_student_play1_pvp">PVP</string>
    <string name="main_activity_student_play1_play_with_friends">Bermain Bersama Teman</string>
    <string name="main_activity_student_play1_leaderboard">Papan Peringkat</string>
    <string name="main_activity_student_play2_back_button">KEMBALI</string>
    <string name="main_activity_student_play2_title">PILIH JENIS PERMAINAN</string>
    <string name="main_activity_student_play2_classic">Klasik</string>
    <string name="main_activity_student_play2_time_trial">Time Trial</string>
    <string name="main_activity_student_play2_warning">Anda membatalkan permainan sebelumnya! Anda tidak diperkenankan bermain selama %d detik.</string>
    <string name="main_activity_student_tab_title1">Personal</string>
    <string name="main_activity_student_tab_title2">Main</string>
    <string name="main_activity_student_tab_title3">Kelas</string>
    <string name="main_activity_student_tab_title4">Profil</string>
    <string name="main_activity_student_play_cancel">Batal</string>
    <string name="main_activity_student_play_time_title">Mencari lawan :</string>
    <string name="main_activity_student_profile_statistic_general">Umum</string>
    <string name="main_activity_student_profile_statistic_total_games">Total permainan :</string>
    <string name="main_activity_student_profile_statistic_total_win">Total kemenangan :</string>
    <string name="main_activity_student_profile_statistic_total_lose">Total kekalahan :</string>
    <string name="main_activity_student_profile_statistic_total_exercise">Total pengerjaan latihan :</string>
    <string name="main_activity_student_profile_statistic_best_pvp_score">Nilai terbaik PvP :</string>
    <string name="main_activity_student_profile_statistic_best_time_trial_score">Nilai terbaik Time Trial :</string>
    <string name="main_activity_student_profile_statistic_total_time_learn">Total waktu belajar :</string>
    <string name="main_activity_student_profile_statistic_pvp">PvP</string>
    <string name="main_activity_student_profile_statistic_answered">Soal terjawab</string>
    <string name="main_activity_student_profile_statistic_answered_true">Total jawab benar :</string>
    <string name="main_activity_student_profile_statistic_answered_false">Total jawab salah :</string>
    <string name="main_activity_student_profile_statistic_time_trial">Time Trial</string>
    <string name="main_activity_student_profile_statistic_template_hasil" formatted="false">%d hari %d jam %d menit</string>
    <string name="main_activity_student_profile_statistic_best_time_trial_template" formatted="false">%d detik</string>
    <string name="main_activity_student_profile_own_data_copy">UID telah disalin!</string>
    <string name="main_activity_student_profile_own_data_code">KODE GURU :</string>
    <string name="main_activity_student_profile_own_data_uid">UID :</string>
    <string name="main_activity_student_profile_own_data_email">EMAIL :</string>
    <string name="main_activity_student_profile_own_data_fullname">NAMA LENGKAP :</string>
    <string name="main_activity_student_profile_own_data_acc">JENIS AKUN :</string>
    <string name="main_activity_student_profile_own_data_school">JENJANG SEKOLAH :</string>
    <string name="main_activity_student_profile_own_data_grade">KELAS :</string>
    <string name="main_activity_student_profile_own_data_copy_title">SALIN</string>
    <string name="main_activity_student_profile_own_data_rankup">NAIK KELAS</string>
    <string name="main_activity_student_class_fragment_title">PILIH KELAS</string>
    <string name="main_activity_student_class_fragment_join_class">Masuk Kelas</string>
    <string name="main_activity_student_class_fragment_add_class">Tambah Kelas</string>
    <string name="dialog_fragment_profile_username_change_title">Masukan username baru :</string>
    <string name="dialog_fragment_profil_username_change_ok_button">ya</string>
    <string name="dialog_fragment_profil_username_change_cancel_button">batalkan</string>
    <string name="dialog_fragment_profil_photo_change_select_resource">Dari Galeri</string>
    <string name="dialog_fragment_profil_photo_change_select_resource2">Dari Kamera</string>
    <string name="dialog_fragment_profil_photo_change_progress_dialog_message">Mengganti foto....</string>
    <string name="dialog_fragment_profile_add_friend_title">Masukan id teman :</string>
    <string name="dialog_fragment_profile_add_friend_desc"><![CDATA[*id dapat dilihat pada menu Profil > MyProfil]]></string>
    <string name="dialog_fragment_profil_add_friend_toast_notif">Permintaan pertemanan sudah dikirim</string>
    <string name="dialog_fragment_add_friend_title">Konfirmasi pertemanan?</string>
    <string name="dialog_fragment_add_friend_no">Tidak</string>
    <string name="dialog_fragment_add_friend_notif" formatted="false">%s telah ditambahkan sebagai teman.</string>
    <string name="dialog_fragment_rank_up_max">Selamat anda telah mencapai rank tertinggi! Layanan untuk jenjang selanjutnya belum tersedia.</string>
    <string name="dialog_fragment_profil_own_data_title">Yakin sudah naik kelas ?</string>
    <string name="dialog_fragment_class_announcement_edit_title">Judul Pengumuman</string>
    <string name="dialog_fragment_class_announcement_edit_content">Isi Pengumuman</string>
    <string name="dialog_fragment_class_announcement_edit_day">Hari</string>
    <string name="dialog_fragment_class_announcement_edit_hour">Jam</string>
    <string name="dialog_fragment_class_announcement_edit_minute">Menit</string>
    <string name="dialog_fragment_class_announcement_edit_change_button">Ubah</string>
    <string name="class_activity_announcement_title">Pengumuman</string>
    <string name="class_activity_assignment_title">Tugas</string>
    <string name="class_activity_forum_title">FORUM</string>
    <string name="class_activity_main_menu_title">Halaman Utama</string>
    <string name="class_activity_make_question_title">Buat Pertanyaan</string>
    <string name="class_activity_another">LAINNYA</string>
    <string name="class_activity_class_info">Info Kelas</string>
    <string name="class_activity_disband">Bubarkan Kelas</string>
    <string name="preference_account_title">Akun</string>
    <string name="preference_account_change_pass">Ganti Password</string>
    <string name="preference_account_change_pass_key">change_pass</string>
    <string name="preference_account_logout">Keluarkan Akun</string>
    <string name="preference_account_logout_key">logout</string>
    <string name="preference_display_title">Tampilan</string>
    <string name="preference_display_theme">Pilih Tema</string>
    <string name="preference_display_theme_key">theme</string>
    <string name="preference_display_language">Pilih Bahasa</string>
    <string name="preference_display_language_key">language</string>
    <string name="preference_notification_title">Pemberitahuan</string>
    <string name="preference_notification_switch_key">notification</string>
    <string name="preference_notification_switch_title">Pemberitahuan Baru</string>
    <string name="preference_notification_ringtone_key">ringtone</string>
    <string name="preference_notification_ringtone_title">Nada Bunyi</string>
    <string name="preference_notification_vibrate_key">vibrate</string>
    <string name="preference_notification_vibrate_title">Getaran</string>
    <string name="preference_notification_sound_key">voice</string>
    <string name="preference_notification_sound_title">Suara</string>
</resources>