<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_account_title">

        <Preference
            android:title="@string/preference_account_change_pass"
            android:key="@string/preference_account_change_pass_key"
            />

        <Preference
            android:title="@string/preference_account_logout"
            android:key="@string/preference_account_logout_key"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_display_title">

        <ListPreference
            android:title="@string/preference_display_theme"
            android:key="@string/preference_display_theme_key"
            android:defaultValue="1"
            android:entries="@array/preference_theme_item"
            android:entryValues="@array/preference_theme_value"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="Terang"/>

        <ListPreference
            android:title="@string/preference_display_language"
            android:key="@string/preference_display_language_key"
            android:defaultValue="1"
            android:entries="@array/preference_language_item"
            android:entryValues="@array/preference_language_value"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="Bahasa Indonesia"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_notification_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_notification_switch_key"
            android:title="@string/preference_notification_switch_title" />

        <RingtonePreference
            android:showDefault="true"
            android:showSilent="true"
            android:dependency="@string/preference_notification_switch_key"
            android:key="@string/preference_notification_ringtone_key"
            android:ringtoneType="notification"
            android:title="@string/preference_notification_ringtone_title"
            android:summary="default"/>

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="@string/preference_notification_switch_key"
            android:key="@string/preference_notification_vibrate_key"
            android:title="@string/preference_notification_vibrate_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="@string/preference_notification_switch_key"
            android:key="@string/preference_notification_sound_key"
            android:title="@string/preference_notification_sound_title" />
    </PreferenceCategory>

</PreferenceScreen>