<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="150dp"
    android:minWidth="250dp"
    android:background="@color/colorPrimary"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_fragment_class_announcement_edit_title_layout"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_fragment_class_announcement_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="40"
            android:maxLength="40"
            android:hint="@string/dialog_fragment_class_announcement_edit_title"
            android:gravity="center"
            android:inputType="textCapCharacters"
            android:padding="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_fragment_class_announcement_edit_content_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/dialog_fragment_class_announcement_edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/dialog_fragment_class_announcement_edit_content"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="10dp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_fragment_class_announcement_edit_day_layout"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/dialog_fragment_class_announcement_edit_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/dialog_fragment_class_announcement_edit_day"
                android:inputType="number"
                android:ems="2"
                android:maxLength="2"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_fragment_class_announcement_edit_hour_layout"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/dialog_fragment_class_announcement_edit_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/dialog_fragment_class_announcement_edit_hour"
                android:inputType="number"
                android:ems="2"
                android:maxLength="2"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_fragment_class_announcement_edit_minute_layout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/dialog_fragment_class_announcement_edit_minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/dialog_fragment_class_announcement_edit_minute"
                android:inputType="number"
                android:ems="2"
                android:maxLength="2"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <anchovy.net.funlearn.fonts.LemonMilkFontButton
            android:id="@+id/dialog_fragment_class_announcement_edit_ok_button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/dialog_fragment_class_announcement_edit_change_button"
            android:textSize="18sp"
            android:textColor="#5DBCD2"
            android:textStyle="bold"/>

        <anchovy.net.funlearn.fonts.LemonMilkFontButton
            android:id="@+id/dialog_fragment_class_announcement_edit_cancel_button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:textSize="18sp"
            android:text="@string/dialog_fragment_profil_username_change_cancel_button"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>